src/tests/testfiles/const/3.txt
testfiles/const/3.c:6:5: error: read-only variable is not assignable
*aa = a;
^
